--- a/src/App.css
+++ b/src/App.css
@@ -1,225 +1,113 @@
-:root {
-  --clr-body: 0 0% 11%;
-  --clr-outer-dark: 227 11% 15%;
-  --clr-info-dark: 231 12% 12%;
-  --clr-footer-dark: 231 7% 9%;
-  --clr-off-white: 0 0% 86%;
-  --clr-stack: 25 79% 78%;
-  
-  --fs-700: 1.5625rem;
-  --fs-400: 0.64rem;
-  --fs-700-heading: 1rem;
-  
-  --ff-sans-serif: "Inter", sans-serif;
+.embla {
+  max-width: 48rem;
+  margin: auto;
+  --slide-height: 600px;
+  --slide-spacing: 1rem;
+  --slide-size: 100%;
 }
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+.embla__viewport {
+  overflow: hidden;
 }
-
-/* Reset margins */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
-  margin: 0; 
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-weight: 400;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* set up the body */
-body {
-  font-family: var(--ff-sans-serif);
-  font-size: var(--fs-400);
-  color: hsl( var(--clr-off-white) );
-  background-color: hsl(var(--clr-body) / 1);
-  line-height: 1.5;
-  min-height: 100vh;
-}
-
-/* make images easier to work with */
-img,
-picutre {
-  max-width: 100%;
-  display: block;
-}
-
-
-li {
-  list-style: none;
-}
-
-
-@media (prefers-reduced-motion: reduce) {  
-*,
-*::before,
-*::after {
-  animation-duration: 0.01ms !important;
-  animation-iteration-count: 1 !important;
-  transition-duration: 0.01ms !important;
-  scroll-behavior: auto !important;
-}
-}
-
-
-
-.main {
-  background: hsl(var(--clr-outer-dark) / 1);
-  max-width: 34.375rem;
-  margin-inline: auto;
-  padding: 3.3125em 4.0625em
-}
-
-.main__section {
-  background: hsl(var(--clr-info-dark) / 1);
-  max-width: 19.8125rem;
-  margin-inline: auto;
+.embla__container {
+  backface-visibility: hidden;
   display: flex;
-  flex-direction: column;
-  border-radius: 0px 0px 10px 10px;
+  touch-action: pan-y pinch-zoom;
+  margin-left: calc(var(--slide-spacing) * -1);
 }
-
-
-.section-info {
-  padding: 1em 2.1875em;
-  text-align: center;
-  margin-inline: auto
+.embla__slide {
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  height: auto;
+  padding-left: var(--slide-spacing);
 }
-
-.btn {
-  background: unset;
-  color: white;
-  border: unset;
-  margin: 1em 0; 
-  /* padding: 1em 3em; */
-}
-
-.name {
-  font-size: var(--fs-700);
-  font-weight: 700;
-  margin-top: 1.3125em
-}
-
-.stack {
-  color: hsl(var(--clr-stack));
-  font-size: 0.8rem;
-  margin-bottom: 0.55em
-}
-
-.section-info a {
-  color: hsla(0, 0%, 96%, 1);
-}
-
-.section-info small a {
-  font-size: 0.64rem;
-}
-
-.contact {
-  margin-top: 1.5em;
-}
-
-.contact a {
-  background: hsla(216, 12%, 84%, 1);
-  display: inline-block;
-  border-radius: 6px;
-  box-shadow: hsla(0, 0%, 0%, 0.05);
-  padding: 0.56em 1.5em;
-  color: hsla(217, 19%, 27%, 1);
-  font-weight: 700;
-  font-size: 0.875rem;
-}
-
-.contact > *:where(:not(:first-child)) {
-  margin-left: var(--flow-space, 1rem);
-}
-
-.contact a:last-child{
-  background: hsla(212, 72%, 60%, 1);
-  color: hsla(0, 0%, 100%, 1);
-}
-
-.icon {
-vertical-align: middle;
-margin-right: 9.6px;
-flex-shrink: 0;
-width: 16px;
-height: 16px;
-color: hsla(232, 12%, 13%, 1);
-}
-
-
-.section_about, .section_interest {
-  padding: 1em 2.25em; 
-  margin-inline: auto; 
-}
-
-.section_interest {
-  margin-top: 1.6875em;
-}
-
-.about, .interest {
-  font-weight: 700;
-  margin-bottom: 0.3125em;
-  color: hsla(0, 0%, 96%, 1);
-  margin-top: 1.0625em;
-  font-size: 1rem;
-}
-
-.about__text, .interest__text {
-  color: hsla(0, 0%, 86%, 1);
-  font-size: var(--fs-400);
-  max-width: 247px;
-  width: 100%;
-}
-
-.interest {
-  margin-top: 0;
-}
-
-.interest__text {
-  margin-bottom: 3.5em;
-}
-
-.section_footer {
-  background: hsl(var(--clr-footer-dark) / 1);
-  border-radius: 0px 0px 10px 10px;
-  padding: 1.1875em 0;
-  
-}
-
-.footer_social {
+.embla__slide__number {
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+  border-radius: 1.8rem;
+  font-size: 4rem;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 247px;
+  height: var(--slide-height);
+  user-select: none;
 }
-
-.footer_social li {
-  background: hsla(254, 6%, 58%, 1);
-  padding: 0.35em;
-  border-radius: 5px
+.embla__controls {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  justify-content: space-between;
+  gap: 1.2rem;
+  margin-top: 1.8rem;
 }
-
-li + li {
-  margin-left: 1.5em
+.embla__buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.6rem;
+  align-items: center;
 }
-
+.embla__button {
+  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+  width: 3.6rem;
+  height: 3.6rem;
+  z-index: 1;
+  border-radius: 50%;
+  color: var(--text-body);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.embla__button:disabled {
+  color: var(--detail-high-contrast);
+}
+.embla__button__svg {
+  width: 35%;
+  height: 35%;
+}
+.embla__dots {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
+}
+.embla__dot {
+  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  width: 2.6rem;
+  height: 2.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.embla__dot:after {
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+  width: 1.4rem;
+  height: 1.4rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  content: '';
+}
+.embla__dot--selected:after {
+  box-shadow: inset 0 0 0 0.2rem var(--text-body);
+}
